:art: change save or update menu resources interface
