# internal/api/menu.go
@@ -6,6 +6,7 @@ import (
 	"gin-admin-template/internal/service"
 	"github.com/gin-gonic/gin"
 	"github.com/jinzhu/copier"
+	"gorm.io/gorm"
 	"net/http"
 	"strconv"
 )
@@ -17,6 +18,10 @@ type MenuQuery struct {
 type MenuTree struct {
 	domain.Menu
 	Children []*MenuTree `json:"children"`
+}
+type MenuAdd struct {
+	domain.Menu
+	ResourceIds []string `json:"resourceIds,omitempty"`
 }
 
 // GetMenus
@@ -84,33 +89,78 @@ func GetMenu(c *gin.Context) {
 	c.JSON(http.StatusOK, menu)
 }
 
+// GetMenuResources
+// @Summary Menu resources 获取菜单资源
+// @Tags menus 菜单
+// @Accept json
+// @Produce json
+// @Security ApiKeyAuth
+// @Param id path string true "Menu ID"
+// @Router /menus/{id}/resources [get]
+func GetMenuResources(c *gin.Context) {
+	id, err := strconv.ParseInt(c.Param("id"), 10, 64)
+	if err != nil {
+		service.ParamBadRequestResult(c, err)
+		return
+	}
+	resourceIds, err := service.FindResourceIdsByMenuId(id)
+	if err != nil {
+		service.BadRequestResult(c, "Failed.query", err)
+		return
+	}
+	c.JSON(http.StatusOK, resourceIds)
+}
+
 // CreateMenu
 // @Summary Create menu 创建菜单
 // @Tags menus 菜单
 // @Accept json
 // @Produce json
 // @Security ApiKeyAuth
-// @Param data body domain.Menu true "Menu info 菜单信息"
+// @Param data body MenuAdd true "Menu info 菜单信息"
 // @Router /menus [post]
 func CreateMenu(c *gin.Context) {
-	var menu domain.Menu
-	err := c.ShouldBindJSON(&menu)
+	var menuAdd MenuAdd
+	err := c.ShouldBindJSON(&menuAdd)
 	if err != nil {
 		service.ParamBadRequestResult(c, err)
 		return
 	}
-	_, err = service.FindMenuByPath(menu.Path)
+	_, err = service.FindMenuByPath(menuAdd.Path)
 	if err == nil {
 		service.ConflictResult(c, "Existed.path")
 		return
 	}
-	menu.Id = config.IdGenerate()
-	err = service.Insert(&menu)
+	menuId := config.IdGenerate()
+	err = config.DB.Transaction(func(tx *gorm.DB) error {
+		menu := domain.Menu{
+			Id: menuId,
+		}
+		copier.Copy(&menu, &menuAdd)
+		if err = tx.Create(&menu).Error; err != nil {
+			return err
+		}
+		if len(menuAdd.ResourceIds) > 0 {
+			var mrr []domain.MenuResourceRelation
+			for _, id := range menuAdd.ResourceIds {
+				resourceId, _ := strconv.ParseInt(id, 10, 64)
+				mrr = append(mrr, domain.MenuResourceRelation{
+					Id:         config.IdGenerate(),
+					ResourceId: resourceId,
+					MenuId:     menuId,
+				})
+			}
+			if err = tx.Create(&mrr).Error; err != nil {
+				return err
+			}
+		}
+		return nil
+	})
 	if err != nil {
-		service.ParamBadRequestResult(c, err)
+		service.BadRequestResult(c, "Failed.create", err)
 		return
 	}
-	c.JSON(http.StatusOK, domain.NewIdWrapper(menu.Id))
+	c.JSON(http.StatusOK, domain.NewIdWrapper(menuId))
 }
 
 // UpdateMenu
@@ -120,36 +170,64 @@ func CreateMenu(c *gin.Context) {
 // @Produce json
 // @Security ApiKeyAuth
 // @Param id path string true "Menu ID"
-// @Param data body domain.Menu true "Menu info 菜单信息"
+// @Param data body MenuAdd true "Menu info 菜单信息"
 // @Router /menus/{id} [put]
 func UpdateMenu(c *gin.Context) {
-	id, err := strconv.ParseInt(c.Param("id"), 10, 64)
+	menuId, err := strconv.ParseInt(c.Param("id"), 10, 64)
+	if err != nil {
+		service.ParamBadRequestResult(c, err)
+		return
+	}
+	var menuAdd MenuAdd
+	err = c.ShouldBindJSON(&menuAdd)
 	if err != nil {
 		service.ParamBadRequestResult(c, err)
 		return
 	}
 	var menu domain.Menu
-	err = c.ShouldBindJSON(&menu)
-	if err != nil {
-		service.ParamBadRequestResult(c, err)
-		return
-	}
-	menu.Id = id
-	var oldMenu domain.Menu
-	err = service.FindById(&oldMenu, menu.Id)
+	err = service.FindById(&menu, menuAdd.Id)
 	if err != nil {
 		service.BadRequestResult(c, "NotExist.org", err)
 		return
 	}
-	if menu.Path != oldMenu.Path {
-		_, err = service.FindMenuByPath(menu.Path)
+	if menuAdd.Path != menu.Path {
+		_, err = service.FindMenuByPath(menuAdd.Path)
 		if err == nil {
 			service.ConflictResult(c, "Existed.path")
 			return
 		}
 	}
 
-	err = service.Update(&menu)
+	err = config.DB.Transaction(func(tx *gorm.DB) error {
+		copier.Copy(&menu, menuAdd)
+		if err = tx.Save(&menu).Error; err != nil {
+			return err
+		}
+		var oldMrr []domain.MenuResourceRelation
+		if err = tx.Where("menu_id = ?", menuId).Find(&oldMrr).Error; err != nil {
+			return err
+		}
+		if len(oldMrr) > 0 {
+			if err = tx.Delete(oldMrr).Error; err != nil {
+				return err
+			}
+		}
+		if len(menuAdd.ResourceIds) > 0 {
+			var mrr []domain.MenuResourceRelation
+			for _, id := range menuAdd.ResourceIds {
+				resourceId, _ := strconv.ParseInt(id, 10, 64)
+				mrr = append(mrr, domain.MenuResourceRelation{
+					Id:         config.IdGenerate(),
+					ResourceId: resourceId,
+					MenuId:     menuId,
+				})
+			}
+			if err = tx.Create(&mrr).Error; err != nil {
+				return err
+			}
+		}
+		return nil
+	})
 	if err != nil {
 		service.BadRequestResult(c, "Failed.update", err)
 		return
@@ -171,12 +249,18 @@ func DeleteMenu(c *gin.Context) {
 		service.ParamBadRequestResult(c, err)
 		return
 	}
-	err = service.DeleteById(domain.Menu{}, id)
-	if err != nil {
-		service.BadRequestResult(c, "Failed.delete", err)
-		return
-	}
-	err = service.DeleteMenusByPid(id)
+	err = config.DB.Transaction(func(tx *gorm.DB) error {
+		if err = tx.Delete(&domain.Menu{}, id).Error; err != nil {
+			return err
+		}
+		if err = tx.Where("pid = ?", id).Delete(&domain.Menu{}).Error; err != nil {
+			return err
+		}
+		if err = tx.Where("menu_id = ?", id).Delete(&domain.MenuResourceRelation{}).Error; err != nil {
+			return err
+		}
+		return nil
+	})
 	if err != nil {
 		service.BadRequestResult(c, "Failed.delete", err)
 		return
